# website-mark01

./: .gitignore  .sample.env  Dockerfile  README.md  build.sh  pyproject.toml  requirements.txt
.github/workflows/: docker-build-push.yml
src/: main.py
src/app/: __init__.py  routes.py  settings.py  utils.py  views.py
src/static/css/: input.css  package-lock.json  package.json  styles.css  tailwind.config.js
src/static/js/: home.js
src/static/js/modules/: base.js  components.js  glows.js  tools.js
src/templates/: base.html  colors.html  home.html
src/templates/about/: contact.html
src/templates/emails/: contact.html
src/templates/includes/: about.html  cards.html  contact.html  footer.html  glows.html  header.html  hero.html  services.html
